opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/command_rpc"
bug-reports: "https://github.com/janestreet/command_rpc/issues"
dev-repo: "https://github.com/janestreet/command_rpc.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "command_rpc" "--root" "." "-j" jobs "@install"]
]
depends: [
  "async"
  "core"
  "jbuilder"                {build}
  "ppx_driver"
  "ppx_jane"
  "ocaml-migrate-parsetree"
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Utilities for Versioned RPC communication with a child process over stdin and stdout.
"
